--- a/package.json
+++ b/package.json
@@ -9,19 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-aria/checkbox": "^3.14.6",
+    "@react-native-aria/checkbox": "^0.2.9",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "@types/react": "~18.2.79",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-safe-area-context": "4.10.5",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-screens": "^3.34.0",
     "react-native-svg": "15.2.0",
+    "react-native-vector-icons": "^10.1.0",
     "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react-native": "^0.73.0"
+    "@types/react-native": "^0.73.0",
+    "@types/react-native-vector-icons": "^6.4.18"
   },
   "private": true
 }
